--- a/task3/color-palettes/src/components/Header.css
+++ b/task3/color-palettes/src/components/Header.css
@@ -1,6 +1,7 @@
 /* Header.css */
 header {
     display: flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
