--- a/task3/color-palettes/src/components/Header.css
+++ b/task3/color-palettes/src/components/Header.css
@@ -2,6 +2,7 @@
 header {
     display: flex;
     width: 100%;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
